--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "private": true,
   "dependencies": {
     "@babel/eslint-parser": "^7.24.1",
+    "@projectstorm/react-diagrams": "^7.0.4",
+    "@syncfusion/ej2-react-diagrams": "^25.1.41",
+    "@syncfusion/ej2-react-inputs": "^25.1.40",
+    "@syncfusion/ej2-react-lists": "^25.1.41",
+    "@syncfusion/ej2-react-navigations": "^25.1.41",
+    "@syncfusion/ej2-react-splitbuttons": "^25.1.38",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -12,9 +18,11 @@
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
     "axios": "^1.6.8",
+    "lucide-react": "^0.376.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.6.4",
     "web-vitals": "^1.0.1"
@@ -42,5 +50,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "html-webpack-plugin": "^5.6.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
